[package]
name = "ori2_rando_stats"
version = "0.1.0"
authors = ["SiriusAshling <53594055+SiriusAshling@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seedgen = { path = "../OriWotwRandomizerClient/projects/SeedGenCli" }
# seedgen = { git = "https://github.com/sparkle-preference/OriWotwRandomizerClient" }
rand = "0.8.3"
log = "0.4"
